# dataengineering

./: .gitignore  README.md  pyproject.toml
01-infra/cloud/AWS/EMR/: main.tf
01-infra/homelab/orchestration/docker/spark-iceberg-nessie/: docker-compose.yaml
01-infra/homelab/orchestration/k3s/: k3s_install.sh
01-infra/homelab/processing/spark-cluster/: diagnosis.sh
04-Analytics/: README.md
