[tool.poetry]
name = "dataengineering"
version = "0.1.0"
description = ""
authors = ["rohin,poloju"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "1.1.2"
pandas = "2.2.3"
pyarrow = "^18.1.0"
boto3 = "^1.35.94"
pyspark = "^3.5.4"
jupyter = "1.1.1"
agate = "1.9.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "24.2.0"
babel = "2.16.0"
backoff = "2.2.1"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.3.0"
cycler = "0.12.1"
daff = "1.3.46"
dbt-adapters = "1.7.0"
dbt-common = "1.10.0"
dbt-core = "1.8.8"
dbt-duckdb = "1.9.0"
dbt-extractor = "0.5.1"
dbt-semantic-interfaces = "0.5.1"
debugpy = "1.8.7"
decorator = "5.1.1"
deepdiff = "7.0.1"
defusedxml = "0.7.1"
duckdb-engine = "0.13.4"
executing = "2.1.0"
fastjsonschema = "2.20.0"
fonttools = "4.54.1"
fqdn = "1.5.1"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
idna = "3.10"
importlib-metadata = "6.11.0"
ipykernel = "6.29.5"
ipython = "8.29.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.5"
isodate = "0.6.1"
isoduration = "20.11.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupysql = "0.10.14"
jupysql-plugin = "0.4.5"
jupyter-console = "6.6.3"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
jupyter-server = "2.14.2"
jupyter-server-terminals = "0.5.3"
jupyterlab = "4.2.5"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.27.3"
jupyterlab-widgets = "3.0.13"
kiwisolver = "1.4.7"
lab = "8.3"
leather = "0.4.0"
logbook = "1.5.3"
markupsafe = "3.0.2"
mashumaro = "3.14"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
minimal-snowplow-tracker = "0.0.2"
mistune = "3.0.2"
monotonic = "1.6"
more-itertools = "10.5.0"
msgpack = "1.1.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
notebook = "7.2.2"
notebook-shim = "0.2.4"
numpy = "2.1.2"
ordered-set = "4.1.0"
overrides = "7.7.0"
packaging = "24.1"
pandocfilters = "1.5.1"
parsedatetime = "2.6"
parso = "0.8.4"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "11.0.0"
platformdirs = "4.3.6"
ploomber-core = "0.2.25"
posthog = "3.7.0"
prettytable = "3.11.0"
prometheus-client = "0.21.0"
prompt-toolkit = "3.0.48"
protobuf = "4.25.5"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
python-json-logger = "2.0.7"
python-slugify = "8.0.4"
pytimeparse = "1.1.8"
pytz = "2024.2"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
referencing = "0.35.1"
requests = "2.32.3"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rpds-py = "0.20.0"
send2trash = "1.8.3"
setuptools = "75.2.0"
simplejson = "3.19.3"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.6"
sqlalchemy = "2.0.36"
sqlglot = "25.28.0"
sqlparse = "0.5.1"
stack-data = "0.6.3"
terminado = "0.18.1"
text-unidecode = "1.3"
tinycss2 = "1.4.0"
tornado = "6.4.1"
traitlets = "5.14.3"
txt2tags = "3.9"
types-python-dateutil = "2.9.0.20241003"
typing-extensions = "4.12.2"
tzdata = "2024.2"
uri-template = "1.3.0"
urllib3 = "2.2.3"
wcwidth = "0.2.13"
webcolors = "24.8.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
widgetsnbextension = "4.0.13"
zipp = "3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
